lab3/lab3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab3-service
  labels:
    app: lab3
spec:
  selector:
    app: lab3
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 3000
  type: NodePort
