lab3/lab3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab3-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  tls:
#    - secretName: lab3-tls
#      hosts:
#        - matvales.lab331.cloud
  rules:
  - host: matvales.lab331.cloud
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: lab3-service
            port:
              number: 9090
